# nvloupe

./: .coderabbit.yaml  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Justfile  README.md  SECURITY.md  mise.toml  rust-toolchain.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  false_positive.yml  feature_request.yml  missed_capability.yml  rule_proposal.yml
.github/workflows/: ci.yml  codeql.yml
